tests/baselines/reference/comparisonOperatorWithIdenticalObjects.errors.txt
comparisonOperatorWithIdenticalObjects.ts(61,12): error TS2365: Operator '<' cannot be applied to types 'A1' and 'B1'.
comparisonOperatorWithIdenticalObjects.ts(62,12): error TS2365: Operator '<' cannot be applied to types 'Base' and 'Base'.
comparisonOperatorWithIdenticalObjects.ts(63,12): error TS2365: Operator '<' cannot be applied to types 'A2' and 'B2'.
comparisonOperatorWithIdenticalObjects.ts(64,12): error TS2365: Operator '<' cannot be applied to types 'A3' and 'B3'.
comparisonOperatorWithIdenticalObjects.ts(65,12): error TS2365: Operator '<' cannot be applied to types 'A4' and 'B4'.
comparisonOperatorWithIdenticalObjects.ts(66,12): error TS2365: Operator '<' cannot be applied to types 'A5' and 'B5'.
comparisonOperatorWithIdenticalObjects.ts(67,12): error TS2365: Operator '<' cannot be applied to types 'A6' and 'B6'.
comparisonOperatorWithIdenticalObjects.ts(69,12): error TS2365: Operator '<' cannot be applied to types 'B1' and 'A1'.
comparisonOperatorWithIdenticalObjects.ts(70,12): error TS2365: Operator '<' cannot be applied to types 'Base' and 'Base'.
comparisonOperatorWithIdenticalObjects.ts(71,12): error TS2365: Operator '<' cannot be applied to types 'B2' and 'A2'.
comparisonOperatorWithIdenticalObjects.ts(72,12): error TS2365: Operator '<' cannot be applied to types 'B3' and 'A3'.
comparisonOperatorWithIdenticalObjects.ts(73,12): error TS2365: Operator '<' cannot be applied to types 'B4' and 'A4'.
comparisonOperatorWithIdenticalObjects.ts(74,12): error TS2365: Operator '<' cannot be applied to types 'B5' and 'A5'.
comparisonOperatorWithIdenticalObjects.ts(75,12): error TS2365: Operator '<' cannot be applied to types 'B6' and 'A6'.
comparisonOperatorWithIdenticalObjects.ts(78,12): error TS2365: Operator '>' cannot be applied to types 'A1' and 'B1'.
comparisonOperatorWithIdenticalObjects.ts(79,12): error TS2365: Operator '>' cannot be applied to types 'Base' and 'Base'.
comparisonOperatorWithIdenticalObjects.ts(80,12): error TS2365: Operator '>' cannot be applied to types 'A2' and 'B2'.
comparisonOperatorWithIdenticalObjects.ts(81,12): error TS2365: Operator '>' cannot be applied to types 'A3' and 'B3'.
comparisonOperatorWithIdenticalObjects.ts(82,12): error TS2365: Operator '>' cannot be applied to types 'A4' and 'B4'.
comparisonOperatorWithIdenticalObjects.ts(83,12): error TS2365: Operator '>' cannot be applied to types 'A5' and 'B5'.
comparisonOperatorWithIdenticalObjects.ts(84,12): error TS2365: Operator '>' cannot be applied to types 'A6' and 'B6'.
comparisonOperatorWithIdenticalObjects.ts(86,12): error TS2365: Operator '>' cannot be applied to types 'B1' and 'A1'.
comparisonOperatorWithIdenticalObjects.ts(87,12): error TS2365: Operator '>' cannot be applied to types 'Base' and 'Base'.
comparisonOperatorWithIdenticalObjects.ts(88,12): error TS2365: Operator '>' cannot be applied to types 'B2' and 'A2'.
comparisonOperatorWithIdenticalObjects.ts(89,12): error TS2365: Operator '>' cannot be applied to types 'B3' and 'A3'.
comparisonOperatorWithIdenticalObjects.ts(90,12): error TS2365: Operator '>' cannot be applied to types 'B4' and 'A4'.
comparisonOperatorWithIdenticalObjects.ts(91,12): error TS2365: Operator '>' cannot be applied to types 'B5' and 'A5'.
comparisonOperatorWithIdenticalObjects.ts(92,12): error TS2365: Operator '>' cannot be applied to types 'B6' and 'A6'.
comparisonOperatorWithIdenticalObjects.ts(95,12): error TS2365: Operator '<=' cannot be applied to types 'A1' and 'B1'.
comparisonOperatorWithIdenticalObjects.ts(96,12): error TS2365: Operator '<=' cannot be applied to types 'Base' and 'Base'.
comparisonOperatorWithIdenticalObjects.ts(97,12): error TS2365: Operator '<=' cannot be applied to types 'A2' and 'B2'.
comparisonOperatorWithIdenticalObjects.ts(98,12): error TS2365: Operator '<=' cannot be applied to types 'A3' and 'B3'.
comparisonOperatorWithIdenticalObjects.ts(99,12): error TS2365: Operator '<=' cannot be applied to types 'A4' and 'B4'.
comparisonOperatorWithIdenticalObjects.ts(100,12): error TS2365: Operator '<=' cannot be applied to types 'A5' and 'B5'.
comparisonOperatorWithIdenticalObjects.ts(101,12): error TS2365: Operator '<=' cannot be applied to types 'A6' and 'B6'.
comparisonOperatorWithIdenticalObjects.ts(103,12): error TS2365: Operator '<=' cannot be applied to types 'B1' and 'A1'.
comparisonOperatorWithIdenticalObjects.ts(104,12): error TS2365: Operator '<=' cannot be applied to types 'Base' and 'Base'.
comparisonOperatorWithIdenticalObjects.ts(105,12): error TS2365: Operator '<=' cannot be applied to types 'B2' and 'A2'.
comparisonOperatorWithIdenticalObjects.ts(106,12): error TS2365: Operator '<=' cannot be applied to types 'B3' and 'A3'.
comparisonOperatorWithIdenticalObjects.ts(107,12): error TS2365: Operator '<=' cannot be applied to types 'B4' and 'A4'.
comparisonOperatorWithIdenticalObjects.ts(108,12): error TS2365: Operator '<=' cannot be applied to types 'B5' and 'A5'.
comparisonOperatorWithIdenticalObjects.ts(109,12): error TS2365: Operator '<=' cannot be applied to types 'B6' and 'A6'.
comparisonOperatorWithIdenticalObjects.ts(112,12): error TS2365: Operator '>=' cannot be applied to types 'A1' and 'B1'.
comparisonOperatorWithIdenticalObjects.ts(113,12): error TS2365: Operator '>=' cannot be applied to types 'Base' and 'Base'.
comparisonOperatorWithIdenticalObjects.ts(114,12): error TS2365: Operator '>=' cannot be applied to types 'A2' and 'B2'.
comparisonOperatorWithIdenticalObjects.ts(115,12): error TS2365: Operator '>=' cannot be applied to types 'A3' and 'B3'.
comparisonOperatorWithIdenticalObjects.ts(116,12): error TS2365: Operator '>=' cannot be applied to types 'A4' and 'B4'.
comparisonOperatorWithIdenticalObjects.ts(117,12): error TS2365: Operator '>=' cannot be applied to types 'A5' and 'B5'.
comparisonOperatorWithIdenticalObjects.ts(118,12): error TS2365: Operator '>=' cannot be applied to types 'A6' and 'B6'.
comparisonOperatorWithIdenticalObjects.ts(120,12): error TS2365: Operator '>=' cannot be applied to types 'B1' and 'A1'.
comparisonOperatorWithIdenticalObjects.ts(121,12): error TS2365: Operator '>=' cannot be applied to types 'Base' and 'Base'.
comparisonOperatorWithIdenticalObjects.ts(122,12): error TS2365: Operator '>=' cannot be applied to types 'B2' and 'A2'.
comparisonOperatorWithIdenticalObjects.ts(123,12): error TS2365: Operator '>=' cannot be applied to types 'B3' and 'A3'.
comparisonOperatorWithIdenticalObjects.ts(124,12): error TS2365: Operator '>=' cannot be applied to types 'B4' and 'A4'.
comparisonOperatorWithIdenticalObjects.ts(125,12): error TS2365: Operator '>=' cannot be applied to types 'B5' and 'A5'.
comparisonOperatorWithIdenticalObjects.ts(126,12): error TS2365: Operator '>=' cannot be applied to types 'B6' and 'A6'.


==== comparisonOperatorWithIdenticalObjects.ts (56 errors) ====
    class A1 {
        public a: string;
        public b: number;
        public c: boolean;
        public d: any;
        public e: Object;
        public fn(a: string): string {
            return null;
        }
    }
    class B1 {
        public a: string;
        public b: number;
        public c: boolean;
        public d: any;
        public e: Object;
        public fn(b: string): string {
            return null;
        }
    }
    
    class Base {
        private a: string;
        private fn(b: string): string {
            return null;
        }
    }
    class A2 extends Base { }
    class B2 extends Base { }
    
    interface A3 { f(a: number): string; }
    interface B3 { f(a: number): string; }
    
    interface A4 { new (a: string): A1; }
    interface B4 { new (a: string): B1; }
    
    interface A5 { [x: number]: number; }
    interface B5 { [x: number]: number; }
    
    interface A6 { [x: string]: string; }
    interface B6 { [x: string]: string; }
    
    var a1: A1;
    var a2: A2;
    var a3: A3;
    var a4: A4;
    var a5: A5;
    var a6: A6;
    
    var b1: B1;
    var b2: B2;
    var b3: B3;
    var b4: B4;
    var b5: B5;
    var b6: B6;
    
    var base1: Base;
    var base2: Base;
    
    // operator <
    var r1a1 = a1 < b1;
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'A1' and 'B1'.
    var r1a2 = base1 < base2;
               ~~~~~~~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'Base' and 'Base'.
    var r1a3 = a2 < b2;
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'A2' and 'B2'.
    var r1a4 = a3 < b3;
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'A3' and 'B3'.
    var r1a5 = a4 < b4;
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'A4' and 'B4'.
    var r1a6 = a5 < b5;
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'A5' and 'B5'.
    var r1a7 = a6 < b6;
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'A6' and 'B6'.
    
    var r1b1 = b1 < a1;
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'B1' and 'A1'.
    var r1b2 = base2 < base1;
               ~~~~~~~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'Base' and 'Base'.
    var r1b3 = b2 < a2;
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'B2' and 'A2'.
    var r1b4 = b3 < a3;
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'B3' and 'A3'.
    var r1b5 = b4 < a4;
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'B4' and 'A4'.
    var r1b6 = b5 < a5;
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'B5' and 'A5'.
    var r1b7 = b6 < a6;
               ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'B6' and 'A6'.
    
    // operator >
    var r2a1 = a1 > b1;
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'A1' and 'B1'.
    var r2a2 = base1 > base2;
               ~~~~~~~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'Base' and 'Base'.
    var r2a3 = a2 > b2;
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'A2' and 'B2'.
    var r2a4 = a3 > b3;
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'A3' and 'B3'.
    var r2a5 = a4 > b4;
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'A4' and 'B4'.
    var r2a6 = a5 > b5;
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'A5' and 'B5'.
    var r2a7 = a6 > b6;
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'A6' and 'B6'.
    
    var r2b1 = b1 > a1;
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'B1' and 'A1'.
    var r2b2 = base2 > base1;
               ~~~~~~~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'Base' and 'Base'.
    var r2b3 = b2 > a2;
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'B2' and 'A2'.
    var r2b4 = b3 > a3;
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'B3' and 'A3'.
    var r2b5 = b4 > a4;
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'B4' and 'A4'.
    var r2b6 = b5 > a5;
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'B5' and 'A5'.
    var r2b7 = b6 > a6;
               ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'B6' and 'A6'.
    
    // operator <=
    var r3a1 = a1 <= b1;
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'A1' and 'B1'.
    var r3a2 = base1 <= base2;
               ~~~~~~~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'Base' and 'Base'.
    var r3a3 = a2 <= b2;
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'A2' and 'B2'.
    var r3a4 = a3 <= b3;
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'A3' and 'B3'.
    var r3a5 = a4 <= b4;
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'A4' and 'B4'.
    var r3a6 = a5 <= b5;
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'A5' and 'B5'.
    var r3a7 = a6 <= b6;
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'A6' and 'B6'.
    
    var r3b1 = b1 <= a1;
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'B1' and 'A1'.
    var r3b2 = base2 <= base1;
               ~~~~~~~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'Base' and 'Base'.
    var r3b3 = b2 <= a2;
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'B2' and 'A2'.
    var r3b4 = b3 <= a3;
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'B3' and 'A3'.
    var r3b5 = b4 <= a4;
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'B4' and 'A4'.
    var r3b6 = b5 <= a5;
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'B5' and 'A5'.
    var r3b7 = b6 <= a6;
               ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'B6' and 'A6'.
    
    // operator >=
    var r4a1 = a1 >= b1;
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'A1' and 'B1'.
    var r4a2 = base1 >= base2;
               ~~~~~~~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'Base' and 'Base'.
    var r4a3 = a2 >= b2;
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'A2' and 'B2'.
    var r4a4 = a3 >= b3;
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'A3' and 'B3'.
    var r4a5 = a4 >= b4;
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'A4' and 'B4'.
    var r4a6 = a5 >= b5;
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'A5' and 'B5'.
    var r4a7 = a6 >= b6;
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'A6' and 'B6'.
    
    var r4b1 = b1 >= a1;
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'B1' and 'A1'.
    var r4b2 = base2 >= base1;
               ~~~~~~~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'Base' and 'Base'.
    var r4b3 = b2 >= a2;
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'B2' and 'A2'.
    var r4b4 = b3 >= a3;
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'B3' and 'A3'.
    var r4b5 = b4 >= a4;
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'B4' and 'A4'.
    var r4b6 = b5 >= a5;
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'B5' and 'A5'.
    var r4b7 = b6 >= a6;
               ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'B6' and 'A6'.
    
    // operator ==
    var r5a1 = a1 == b1;
    var r5a2 = base1 == base2;
    var r5a3 = a2 == b2;
    var r5a4 = a3 == b3;
    var r5a5 = a4 == b4;
    var r5a6 = a5 == b5;
    var r5a7 = a6 == b6;
    
    var r5b1 = b1 == a1;
    var r5b2 = base2 == base1;
    var r5b3 = b2 == a2;
    var r5b4 = b3 == a3;
    var r5b5 = b4 == a4;
    var r5b6 = b5 == a5;
    var r5b7 = b6 == a6;
    
    // operator !=
    var r6a1 = a1 != b1;
    var r6a2 = base1 != base2;
    var r6a3 = a2 != b2;
    var r6a4 = a3 != b3;
    var r6a5 = a4 != b4;
    var r6a6 = a5 != b5;
    var r6a7 = a6 != b6;
    
    var r6b1 = b1 != a1;
    var r6b2 = base2 != base1;
    var r6b3 = b2 != a2;
    var r6b4 = b3 != a3;
    var r6b5 = b4 != a4;
    var r6b6 = b5 != a5;
    var r6b7 = b6 != a6;
    
    // operator ===
    var r7a1 = a1 === b1;
    var r7a2 = base1 === base2;
    var r7a3 = a2 === b2;
    var r7a4 = a3 === b3;
    var r7a5 = a4 === b4;
    var r7a6 = a5 === b5;
    var r7a7 = a6 === b6;
    
    var r7b1 = b1 === a1;
    var r7b2 = base2 === base1;
    var r7b3 = b2 === a2;
    var r7b4 = b3 === a3;
    var r7b5 = b4 === a4;
    var r7b6 = b5 === a5;
    var r7b7 = b6 === a6;
    
    // operator !==
    var r8a1 = a1 !== b1;
    var r8a2 = base1 !== base2;
    var r8a3 = a2 !== b2;
    var r8a4 = a3 !== b3;
    var r8a5 = a4 !== b4;
    var r8a6 = a5 !== b5;
    var r8a7 = a6 !== b6;
    
    var r8b1 = b1 !== a1;
    var r8b2 = base2 !== base1;
    var r8b3 = b2 !== a2;
    var r8b4 = b3 !== a3;
    var r8b5 = b4 !== a4;
    var r8b6 = b5 !== a5;
    var r8b7 = b6 !== a6;